--- a/lib/modules/apostrophe-assets/public/css/site.less
+++ b/lib/modules/apostrophe-assets/public/css/site.less
@@ -4,12 +4,13 @@
 body { background-color: @apos-light; }
 
 .main-content {
-  font-family: 'Karla', sans-serif;
+  font-family: 'Open Sans', sans-serif;
   margin: 200px auto;
+  margin-top: 0;
   padding: 20px;
-  max-width: 500px;
+  max-width: 960px;
   color: @apos-white;
-  background-color: @apos-primary;
+  background-color: @apos-white;
   .apos-drop-shadow;
 
   .login-link {
@@ -30,4 +31,16 @@ body { background-color: @apos-light; }
 
   strong { font-weight: bold; }
   em { font-style: italic; }
+}
+
+input {
+    width: 100%;
+}
+
+.headerContainer {
+    top: 0;
+    margin: 0;
+    width: 100%;
+    height: 280px;
+    background-color: #6e1010;
 }
