--- a/lib/modules/apostrophe-assets/public/css/site.less
+++ b/lib/modules/apostrophe-assets/public/css/site.less
@@ -3,13 +3,29 @@
 // Delete the boilerplate CSS below when you are ready to dive in and customize your sites:
 body { background-color: @apos-light; }
 
+.header-container {
+    top: 0;
+    margin: 0;
+    width: 100%;
+    height: 230px;
+    background-color: #8C191E;
+    font-family: 'Merriweather', serif;
+
+    strong {
+        margin-left: 100px;
+	margin-top: 250px;
+	font-size: 40px;
+	color: @apos-white;
+    }
+}
+
 .main-content {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   margin: 200px auto;
-  margin-top: 0;
+  margin-top: 20px;
   padding: 20px;
-  max-width: 960px;
-  color: @apos-white;
+  max-width: 1680px;
+  color: #000;
   background-color: @apos-white;
   .apos-drop-shadow;
 
@@ -35,12 +51,5 @@ body { background-color: @apos-light; }
 
 input {
     width: 100%;
-}
-
-.headerContainer {
-    top: 0;
-    margin: 0;
-    width: 100%;
-    height: 280px;
-    background-color: #6e1010;
+    margin-top: 20px;
 }
